--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "servidor",
+  "name": "nombre-del-proyecto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.21.1"
   }
